added image gallery added retrofit service added more tests for the adviewmodel added images added binding adapter for viewpager added communication service added textprovider service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="call">Call</string>
     <string name="sms">sms</string>
     <string name="email">email</string>
+    <string name="image_description">image</string>
+    <string name="email_template">Hi I am interested for the above ad</string>
 </resources>
