added implementation for sharing content added call phone functionality added send sms functionality added send sms functionality added dialogservice, only displaying messages as toasts, but sufficient for now
updated tests of viewmodel for any new commands, as share,call,etc

updated string values

updated dependencies on dagger modules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,8 @@
     <string name="email">email</string>
     <string name="image_description">image</string>
     <string name="email_template">Hi I am interested for the above ad</string>
+    <string name="share">Share with...</string>
+    <string name="bookmark">bookmark</string>
+    <string name="share_subject">Saw this on GumTree</string>
+    <string name="bookmark_sent">bookmark saved</string>
 </resources>
