ui fixes added images added styles
added open map feature on selecting the address on the details

added tests for map feature on the viewmodel of ad details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,5 @@
     <string name="bookmark">bookmark</string>
     <string name="share_subject">Saw this on GumTree</string>
     <string name="bookmark_sent">bookmark saved</string>
+    <string name="map_location_invalid">opening the map is unavailable</string>
 </resources>
