added more graphics for the main screen
fixes on the contact panel

altered viewmodel for the main screen and enabled data bindings as well

fixed test for main viewmodel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,7 @@
     <string name="share_subject">Saw this on GumTree</string>
     <string name="bookmark_sent">bookmark saved</string>
     <string name="map_location_invalid">opening the map is unavailable</string>
+    <string name="contact_name_placeholder">Contact :</string>
+    <string name="contact_date_posting_from">Posting from :</string>
+
 </resources>
